--- a/app/src/main/res/layout/activity_jugar.xml
+++ b/app/src/main/res/layout/activity_jugar.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:fontFamily="@font/special_elite"
+            android:fontFamily="@font/schoolbell"
             android:textSize="24sp"
             tools:text="Aventura" />
 
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
-            android:fontFamily="@font/special_elite"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 1" />
 
         <TextView
@@ -70,7 +70,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/special_elite"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Decide que haces" />
 
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
-            android:fontFamily="@font/special_elite"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 2" />
     </LinearLayout>
 </LinearLayout>
