--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,12 @@
             android:id="@+id/infoFloatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="right|bottom"
             android:clickable="true"
             android:scaleType="fitCenter"
             android:scaleX="0.7"
             android:scaleY="0.7"
+            app:backgroundTint="@color/azul_oscuro"
             app:srcCompat="@android:drawable/ic_menu_help" />
 
     </FrameLayout>
@@ -86,6 +87,7 @@
             android:layout_marginBottom="20dp"
             android:clickable="true"
             android:scaleType="fitCenter"
+            app:backgroundTint="@color/celeste"
             app:srcCompat="@android:drawable/ic_menu_add" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -102,6 +104,7 @@
             android:layout_marginBottom="20dp"
             android:clickable="true"
             android:scaleType="fitCenter"
+            app:backgroundTint="@color/celeste"
             app:srcCompat="@android:drawable/ic_menu_search" />
     </RelativeLayout>
 
