--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:background="#34FFFFFF"
             android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Aventuras"
+            android:text="@string/app_name"
             android:textColor="@color/azul_oscuro"
             android:textSize="36sp" />
 
