--- a/app/src/main/res/layout/dialog_votar.xml
+++ b/app/src/main/res/layout/dialog_votar.xml
@@ -22,7 +22,7 @@
         android:layout_weight="1"
         android:fontFamily="@font/schoolbell"
         android:gravity="center"
-        android:text="Por favor, vota esta historia:"
+        android:text="@string/votar"
         android:textColor="@color/design_default_color_error"
         android:textSize="30sp" />
 
@@ -41,7 +41,7 @@
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/schoolbell"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Votar" />
+        android:text="@string/votar_btn" />
 
 
     <LinearLayout
