--- a/app/src/main/res/layout/filtrar_dialogo_layout.xml
+++ b/app/src/main/res/layout/filtrar_dialogo_layout.xml
@@ -18,7 +18,7 @@
         android:layout_margin="10dp"
         android:fontFamily="@font/schoolbell"
         android:gravity="center"
-        android:text="Introduce el título o autor que quieras encontrar:"
+        android:text="@string/filtrar"
         android:textColor="@android:color/black"
         android:textSize="36sp" />
 
@@ -51,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/schoolbell"
-        android:text="Solo ver los no publicados" />
+        android:text="@string/no_publi" />
 
     <Button
         android:id="@+id/aceptarBTN_filtrar"
@@ -60,7 +60,7 @@
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/schoolbell"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Aceptar" />
+        android:text="@string/aceptar" />
 
     <LinearLayout
         android:layout_width="600dp"
