--- a/app/src/main/res/layout/fragment_aventuras_local.xml
+++ b/app/src/main/res/layout/fragment_aventuras_local.xml
@@ -21,7 +21,7 @@
             android:layout_weight="5"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Aventura"
+            android:text="@string/aventura"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -32,7 +32,7 @@
             android:layout_weight="3"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Creador"
+            android:text="@string/creador"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -43,7 +43,7 @@
             android:layout_weight="2"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Visitas"
+            android:text="@string/visitas"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -54,7 +54,7 @@
             android:layout_weight="2"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Nota"
+            android:text="@string/nota"
             android:textColor="@color/azul_oscuro" />
     </LinearLayout>
 
