--- a/app/src/main/res/layout/fragment_aventuras_web.xml
+++ b/app/src/main/res/layout/fragment_aventuras_web.xml
@@ -19,7 +19,7 @@
             android:layout_weight="5"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Aventura"
+            android:text="@string/aventura"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_weight="3"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Creador"
+            android:text="@string/creador"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -41,7 +41,7 @@
             android:layout_weight="2"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Visitas"
+            android:text="@string/visitas"
             android:textColor="@color/azul_oscuro" />
 
         <TextView
@@ -52,7 +52,7 @@
             android:layout_weight="2"
             android:fontFamily="@font/schoolbell"
             android:gravity="center"
-            android:text="Nota"
+            android:text="@string/nota"
             android:textColor="@color/azul_oscuro" />
     </LinearLayout>
 
