--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,5 +24,11 @@
 
   </style>
 
+  <style name="CustomProgressBar" parent="android:Widget.ProgressBar.Horizontal">
+    <item name="android:indeterminateOnly">false</item>
+    <item name="android:progressDrawable">@drawable/mipbstyle</item>
+    <item name="android:minHeight">10dip</item>
+    <item name="android:maxHeight">20dip</item>
+  </style>
 
 </resources>
